<resources>
    <string name="app_name">zcook</string>
    <string name="title_recipe_list">Recipe List</string>
    <string name="title_saved_recipe_list">Saved Recipe List</string>
    <string name="title_search_recipe">Search Recipe</string>
    <string name="title_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Nama</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="register">Register</string>
    <string name="lupa_password">lupa password?</string>
    <string name="belum_memiliki_akun">belum memiliki akun?\ </string>
    <string name="register_lowercase">register</string>
    <string name="sudah_memiliki_akun">sudah memiliki akun?\ </string>
    <string name="login_lowercase">login</string>
    <string name="kirim">Kirim</string>
    <string name="reset_password">Reset Password</string>
    <string name="cari_resep">Cari resep</string>
    <string name="bahan">Bahan :</string>
    <string name="simpan">Simpan</string>
    <string name="ubah_akun">Ubah Akun</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="password_lama">Password Lama</string>
    <string name="password_baru">Password Baru</string>
    <string name="re_enter_password_baru">Re-enter Password Baru</string>
    <string name="masuk_ke_akunmu">Masuk ke akunmu</string>
    <string name="masuk_agar_dapat_simpan_resep_dan_review">Masuk agar dapat simpan resep dan review.</string>
    <string name="catatan_pribadi">Catatan pribadi</string>
    <string name="cara_membuat">Cara membuat :</string>
    <string name="ada_yang_mau_dicatat_dari_resep_ini">ada yang mau dicatat dari resep ini?</string>
    <string name="login">Login</string>
    <string name="simpan_catatan">Simpan Catatan</string>
    <string name="gimana_nih_resepnya">gimana nih resepnya?</string>
    <string name="simpan_review">Simpan Review</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="resep_tersimpan">Resep Tersimpan</string>
    <string name="keluar_akun">Keluar Akun</string>
    <string name="masak_apa_kita_hari_ini">Masak apa kita hari ini?</string>
    <string name="rekomendasi_resep_10ribuan">Rekomendasi resep 10ribuan</string>
    <string name="semua_resep">Semua resep</string>
    <string name="review_resep_ini">Review resep ini!</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>