<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_recipe_list"
        android:icon="@drawable/ic_sharp_grid_on_24"
        android:title="@string/title_recipe_list" />

    <item
        android:id="@+id/navigation_search_recipe"
        android:icon="@drawable/ic_sharp_search_24"
        android:title="@string/title_search_recipe" />

    <item
        android:id="@+id/navigation_saved_recipe_list"
        android:icon="@drawable/ic_sharp_bookmark_border_24"
        android:title="@string/title_saved_recipe_list" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_outline_account_circle_24"
        android:title="@string/title_settings" />

</menu>