<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_recipe_list">

    <fragment
        android:id="@+id/navigation_recipe_list"
        android:name="com.ziyad.zcook.ui.home.recipe_list.RecipeListFragment"
        android:label="@string/title_recipe_list"
        tools:layout="@layout/fragment_recipe_list" />

    <fragment
        android:id="@+id/navigation_saved_recipe_list"
        android:name="com.ziyad.zcook.ui.home.saved_recipe_list.SavedRecipeListFragment"
        android:label="@string/title_saved_recipe_list"
        tools:layout="@layout/fragment_saved_recipe_list" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.ziyad.zcook.ui.home.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>