<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_white"
    tools:context=".ui.auth.login.LoginActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inter_component_margin_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_zcook_with_text" />

    <TextView
        android:id="@+id/tv_email_label"
        style="@style/Heading3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/inter_component_margin_medium"
        android:layout_marginTop="@dimen/inter_component_margin_large"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <EditText
        android:id="@+id/et_email"
        style="@style/CustomEditText.Rounded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/inter_component_margin_medium"
        android:layout_marginTop="@dimen/inter_component_margin_small"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/tv_email_label"
        app:layout_constraintStart_toStartOf="@+id/tv_email_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_email_label" />

    <TextView
        android:id="@+id/tv_password_label"
        style="@style/Heading3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/inter_component_margin_medium"
        android:layout_marginTop="@dimen/inter_component_margin_small"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="@+id/et_email"
        app:layout_constraintStart_toStartOf="@+id/et_email"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <EditText
        android:id="@+id/et_password"
        style="@style/CustomEditText.Rounded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/inter_component_margin_medium"
        android:layout_marginTop="@dimen/inter_component_margin_small"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/tv_password_label"
        app:layout_constraintStart_toStartOf="@+id/tv_password_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_password_label" />

    <TextView
        android:id="@+id/tv_to_reset_password"
        style="@style/Heading3min.bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inter_component_margin_small"
        android:text="@string/lupa_password"
        app:layout_constraintEnd_toEndOf="@+id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/inter_component_margin_medium"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/dark_grey"
        android:padding="@dimen/inter_component_margin_small"
        android:text="@string/login"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_to_reset_password" />

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inter_component_margin_medium"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login">

        <TextView
            style="@style/Heading3min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/belum_memiliki_akun"/>
        <TextView
            android:id="@+id/tv_to_register"
            style="@style/Heading3min.bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_lowercase"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>