<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_white"
    tools:context=".ui.auth.reset_password.ResetPasswordActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CustomAppBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:padding="@dimen/inter_component_margin_normal">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:backgroundTint="#FFFFFF"
                android:src="@drawable/ic_baseline_arrow_back_ios_new_24" />

            <TextView
                style="@style/Heading1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/inter_component_margin_normal"
                android:text="@string/reset_password" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_email"
        style="@style/Heading3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/inter_component_margin_medium"
        android:layout_marginTop="@dimen/inter_component_margin_medium"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="@+id/cv_app_bar"
        app:layout_constraintStart_toStartOf="@+id/cv_app_bar"
        app:layout_constraintTop_toBottomOf="@+id/cv_app_bar" />

    <EditText
        android:id="@+id/et_email"
        style="@style/CustomEditText.Rounded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/inter_component_margin_medium"
        android:layout_marginTop="@dimen/inter_component_margin_small"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/tv_email"
        app:layout_constraintStart_toStartOf="@+id/tv_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/inter_component_margin_medium"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/dark_grey"
        android:padding="@dimen/inter_component_margin_small"
        android:text="@string/kirim"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inter_component_margin_medium"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login">

        <TextView
            style="@style/Heading3min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/belum_memiliki_akun" />

        <TextView
            android:id="@+id/tv_to_register"
            style="@style/Heading3min.bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_lowercase" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>