<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.settings.SettingsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_app_bar"
        style="@style/CustomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:padding="@dimen/inter_component_margin_normal">

            <TextView
                style="@style/Heading1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/inter_component_margin_normal"
                android:text="@string/pengaturan" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_to_login"
        app:cardElevation="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_app_bar">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/inter_component_margin_medium"
            android:layout_marginVertical="@dimen/inter_component_margin_normal"
            app:cardCornerRadius="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cyan"
                android:padding="@dimen/inter_component_margin_small">

                <ImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_sharp_account_circle_24" />

                <TextView
                    android:id="@+id/tv_name"
                    style="@style/ParagraphBigger"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/inter_component_margin_small"
                    android:layout_marginTop="@dimen/inter_component_margin_small"
                    android:text="@string/masuk_ke_akunmu"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/iv_profile"
                    app:layout_constraintTop_toTopOf="@+id/iv_profile" />

                <TextView
                    android:id="@+id/tv_email"
                    style="@style/Paragraph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/masuk_agar_dapat_simpan_resep_dan_review"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="@+id/tv_name"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_to_change_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_to_login">

        <TextView
            style="@style/Heading4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/inter_component_margin_medium"
            android:paddingVertical="@dimen/inter_component_margin_normal"
            android:text="@string/ubah_akun"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_to_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_to_change_account">

        <TextView
            style="@style/Heading4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/inter_component_margin_medium"
            android:paddingVertical="@dimen/inter_component_margin_normal"
            android:text="@string/ubah_password"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_to_change_password">

        <TextView
            style="@style/Heading4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/inter_component_margin_medium"
            android:paddingVertical="@dimen/inter_component_margin_normal"
            android:text="@string/keluar_akun"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>