<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_white"
    tools:context=".ui.home.settings.change_password.ChangePasswordActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_app_bar"
        style="@style/CustomAppBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:padding="@dimen/inter_component_margin_normal">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:backgroundTint="#FFFFFF"
                android:src="@drawable/ic_baseline_arrow_back_ios_new_24" />

            <TextView
                style="@style/Heading1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/inter_component_margin_normal"
                android:text="@string/ubah_password" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_old_password_label"
        style="@style/Heading3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/inter_component_margin_medium"
        android:layout_marginTop="@dimen/inter_component_margin_medium"
        android:text="@string/password_lama"
        app:layout_constraintEnd_toEndOf="@+id/cv_app_bar"
        app:layout_constraintStart_toStartOf="@+id/cv_app_bar"
        app:layout_constraintTop_toBottomOf="@+id/cv_app_bar" />

    <EditText
        android:id="@+id/et_old_password"
        style="@style/CustomEditText.Rounded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/inter_component_margin_medium"
        android:layout_marginTop="@dimen/inter_component_margin_small"
        android:ems="10"
        android:hint="@string/password_lama"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/tv_old_password_label"
        app:layout_constraintStart_toStartOf="@+id/tv_old_password_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_old_password_label" />

    <TextView
        android:id="@+id/tv_password_label"
        style="@style/Heading3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/inter_component_margin_medium"
        android:layout_marginTop="@dimen/inter_component_margin_medium"
        android:text="@string/password_baru"
        app:layout_constraintEnd_toEndOf="@+id/et_old_password"
        app:layout_constraintStart_toStartOf="@+id/et_old_password"
        app:layout_constraintTop_toBottomOf="@+id/et_old_password" />

    <EditText
        android:id="@+id/et_password"
        style="@style/CustomEditText.Rounded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/inter_component_margin_medium"
        android:layout_marginTop="@dimen/inter_component_margin_small"
        android:ems="10"
        android:hint="@string/password_baru"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/tv_password_label"
        app:layout_constraintStart_toStartOf="@+id/tv_password_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_password_label" />

    <TextView
        android:id="@+id/tv_reenter_password_label"
        style="@style/Heading3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/inter_component_margin_medium"
        android:layout_marginTop="@dimen/inter_component_margin_medium"
        android:text="@string/re_enter_password_baru"
        app:layout_constraintEnd_toEndOf="@+id/et_password"
        app:layout_constraintStart_toStartOf="@+id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <EditText
        android:id="@+id/et_reenter_password"
        style="@style/CustomEditText.Rounded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/inter_component_margin_medium"
        android:layout_marginTop="@dimen/inter_component_margin_small"
        android:ems="10"
        android:hint="@string/re_enter_password_baru"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/tv_reenter_password_label"
        app:layout_constraintStart_toStartOf="@+id/tv_reenter_password_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_reenter_password_label" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/inter_component_margin_medium"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/dark_grey"
        android:padding="@dimen/inter_component_margin_small"
        android:text="@string/simpan"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_reenter_password" />

</androidx.constraintlayout.widget.ConstraintLayout>